--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "app to synchronize methods in tests",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/Dhaferdhib/fetch-in-tests/issues"
   },
-  "homepage": "https://github.com/Dhaferdhib/fetch-in-tests#readme"
+  "homepage": "https://github.com/Dhaferdhib/fetch-in-tests#readme",
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "morgan": "^1.8.1",
+    "nodemon": "^1.11.0"
+  }
 }
